# Page

./: .gitignore  CMakeLists.txt  CMakePresets.json  PageScraper.cpp  PageScraper.h  README.md
include/: cacher.hpp  cachereader.hpp  cachewriter.hpp  checker.hpp  connector.hpp  formater.hpp  handler.hpp  headers.hpp  iinput.hpp  indexer.hpp  ioutput.hpp  libs.hpp  mainwindow.hpp  menubar.hpp  output.hpp  pagescraper.hpp  parsedresult.hpp  parser.hpp  prep.hpp  saver.hpp  stringmanipulator.hpp  test.hpp  userfunctions.hpp  vectormanipulator.hpp
include/cache/: cacher.hpp  cachereader.hpp  cachewriter.hpp
include/checker/: checker.hpp
include/connector/: connector.hpp
include/downloader/: downloader.hpp
include/error/: errorcatcher.hpp
include/format/: formater.hpp
include/helpfunctions/: stringmanipulator.hpp  userfunctions.hpp
include/indexer/: indexer.hpp
include/io/: iinput.hpp  ioutput.hpp
include/parser/: parsedresult.hpp
include/prep/: prep.hpp
include/print/: print.hpp
include/saver/: saver.hpp
include/test/: test.hpp
lib/Scrap/: CMakeLists.txt
lib/Scrap/include/: extractor.hpp  filterer.hpp  scrapexception.hpp  xmlcacher.hpp
lib/Scrap/include/interface/: ibasefilterer.hpp
lib/Scrap/src/: extractor.cpp  htmlextractor.cpp  vectorfilterer.cpp  xmlcacher.cpp
lib/Scrap/test/: CMakeLists.txt  Test.h.in  cachertest.hpp  extractortest.hpp  filterertest.hpp  formatertest.hpp  main.cpp  receivertest.hpp  test.hpp
libs/Scrap/: CMakeLists.txt  scraplib.hpp
libs/Scrap/include/: cacher.hpp  dll.hpp  downloader.hpp  extractor.hpp  filterer.hpp  formater.hpp  htmlextractor.hpp  htmlformater.hpp  htmlreceiver.hpp  mediadownloader.hpp  receiver.hpp  scrapexception.hpp  vectorfilterer.hpp  xmlcacher.hpp  xmlfilterer.hpp
libs/Scrap/include/interface/: ibasecacher.hpp  ibasedownloader.hpp  ibaseextractor.hpp  ibasefilterer.hpp  ibaseformater.hpp  ibasereceiver.hpp
libs/Scrap/src/: cacher.cpp  downloader.cpp  extractor.cpp  filterer.cpp  formater.cpp  htmlextractor.cpp  htmlformater.cpp  htmlreceiver.cpp  mediadownloader.cpp  receiver.cpp  scrapexception.cpp  vectorfilterer.cpp  xmlfilterer.cpp
src/: cacher.cpp  cachereader.cpp  cachewriter.cpp  checker.cpp  connector.cpp  downloader.cpp  formater.cpp  handler.cpp  indexer.cpp  main.cpp  mainwindow.cpp  menubar.cpp  output.cpp  pagescraper.cpp  parser.cpp  prep.cpp  saver.cpp  stringmanipulator.cpp  test.cpp  userfunctions.cpp  vectormanipulator.cpp
src/cache/: cacher.cpp  cachereader.cpp  cachewriter.cpp
src/checker/: checker.cpp
src/connector/: connector.cpp
src/downloader/: downloader.cpp
src/error/: errorcatcher.cpp
src/format/: formater.cpp
src/helpfunctions/: stringmanipulator.cpp  userfunctions.cpp
src/indexer/: indexer.cpp
src/parser/: parsedresult.cpp
src/prep/: prep.cpp
src/print/: print.cpp
src/saver/: saver.cpp
src/test/: test.cpp
